2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Scheduler.cs: Use the new Async class to use
	the threadpool safely.

2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DeletionDirectives.cs: Moved ExecuteDeletionDirectives
	here.

	* MonkeyWrench.Database.csproj: Updated.

2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DB.cs: Add a CreateCommand overload that specifies
	a timeout.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* SchedulerSVN.cs:
	* Scheduler.cs: Moved here from 
	MonkeyWrench.Database.Manager.

	* MonkeyWrench.Database.csproj: Updated.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* SchedulerSVN.cs: Do input validation of xml log
	from svn server. Fixes #516126.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DB.cs: Add support for uploading compressed files.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DB.cs: Fix eol.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DB.cs: Add a CreateCommand and BeginTransaction method
	and remove tne Connection property. Enables setting
	timeout on all commands in one line.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DB.cs: Fix sorting of null columns to be consistent
	on both 8.1 and 8.3.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DB.cs: For some reason selecting the current date
	in the database doesn't always return the same type.
	Handle this gracefully.

2009-06-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DB.cs: Fix eol-style in UploadString, and when saving
	files to disk copy the gz compressed file if it exists.

2009-06-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DB.cs: When getting work, prefer working on an already
	started revision.

2009-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DB.cs: Refactor md5 code out and add the possibility
	to upload a string.x

2009-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>


	* FileManager.cs: Moved into its own project.

	* Makefile: